# BaseLayer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SONNET_REPO_CLEANUP.md  build_gmail_script.py  generate_tensions_all.py  llms.txt  pyproject.toml  scrape_researchers.py  scrape_researchers_v2.py  tier_all_subjects.py
.githooks/: pre-commit
archive/stale_scripts/: debug_html.py  gpu_experiment_log.txt  overnight_gpu_batch2.py  overnight_gpu_experiments.py  read_bernie_draft.py  scrape_askell.py  scrape_jack_clark.py  scrape_jerry_chen.py  scrape_sanders_opeds.py  scrape_vc_blogs.py
data/: scrape_dan_shipper.py  scrape_dan_shipper_extra.py  scrape_katie_parrott.py
data/scrapers_archive/: clean_morgan_boilerplate.py  cleanup_ryan_holiday.py  scrape_eladgil.py  scrape_eladgil_old.py  scrape_linus.py  scrape_morgan_housel.py  scrape_nat_extra.py  scrape_nat_friedman.py  scrape_ryan_holiday.py  scrape_sasha_chapin.py  scrape_seth_godin.py  scrape_spencer_greenberg.py  scrape_tunguz.py  scrape_tunguz_v3.py  scrape_tyler_cowen.py  scrape_visakan.py
data/swebench/: analyze_results.py
docs/: SYSTEM_OVERVIEW.md
docs/archive/: CLEANUP_LOG.md  EXTRACTION_CAP_SCALING_PLAN.md  (+7 more)
runners/: batch_all_subjects.py  gen_agentic_ts.py  generate_tensions_all.py  generate_wave4_emails.py  migrate_subjects.py  overnight_local_vs_api.py  question_battery.py  question_battery_subject.py  run_high_priority.py  run_provenance_all.py  run_urgent_pipelines.py  run_v2_pipelines.py  run_vc_pipelines.py  run_wave2_pipelines.py  scrape_new_targets.py  scrape_v2_expansion.py  seed_v1_history.py  serving_engine.py  serving_tui.py
scripts/: agent_pipeline.py  author_layers.py  check_progress.py  checkpoint.py  cli.py  config.py  extract_facts.py  generate_website_data.py  import_conversations.py  mcp_server.py  monitor.py  overnight_extended_s100.py  overnight_gpu_cpu_test.py  ui.py
tests/: conftest.py  test_agent_pipeline.py  test_api_client.py  test_author_provenance.py  test_batch_extract.py  test_checkpoint.py  test_cli.py  test_data.py  test_edge_cases.py  test_extract_normalizers.py  test_gates.py  test_golden_dataset.py  test_llm_provider.py  test_mcp.py  test_mcp_extended.py  test_privacy.py  test_seed_format.py  test_unified_brief.py  test_unit.py
(+164 files in other folders)
